# auto-cro-system

./: .coverage  .env  .gitignore  Dockerfile  README.md  contracts.py  docker-compose.yml  main.py  main_pipeline.py  mcp_supabase_server.py  mlflow.db  mlruns.db  pass.txt  pyproject.toml  test_storage.py
.antigravity/: global.rule  project_context.md
.antigravity/skills/: backend_agent.md  ml_agent.md  mlops_agent.md  setup_mlops_tracker.yaml  tests_agent.md
backend/: __init__.py  app.py
backend/api/: deps.py  routes.py
backend/schemas/: requests.py  responses.py
docs/: auto_cro_review.md  math_spec.md
frontend/js/: auto-cro.js
frontend/templates/: index.html
ml_core/: __init__.py  mlops.py  storage.py
ml_core/bandits/: __init__.py  thompson.py
ml_core/vlm/: __init__.py  extractor.py
tests/: conftest.py  test_api.py  test_extractor.py  test_thompson.py
